--- a/Maineditor.html
+++ b/Maineditor.html
@@ -765,13 +765,24 @@
       display: block;
       margin: 0 auto;
       max-width: 100%;
-      max-height: 260px;
+      height: auto;
       object-fit: contain;
     }
 
-    .image-size-s img { max-width: 40%; }
-    .image-size-m img { max-width: 65%; }
-    .image-size-l img { max-width: 100%; }
+    .image-size-s img {
+      max-width: 40%;
+      max-height: 180px;
+    }
+
+    .image-size-m img {
+      max-width: 65%;
+      max-height: 260px;
+    }
+
+    .image-size-l img {
+      max-width: 100%;
+      max-height: 360px;
+    }
 
     .image-caption {
       margin-top: 6px;
@@ -1266,6 +1277,8 @@
   <button data-cmd="bold"><b>B</b></button>
   <button data-cmd="italic"><i>I</i></button>
   <button data-cmd="underline"><u>U</u></button>
+  <button data-cmd="insertUnorderedList">•</button>
+  <button data-cmd="insertOrderedList">1.</button>
   <button data-action="highlight">HL</button>
   <select id="paragraph-style">
     <option value="">¶</option>
