--- a/Maineditor.html
+++ b/Maineditor.html
@@ -791,6 +791,103 @@
       text-align: center;
     }
 
+    /* Embeds */
+    .embed-block {
+      margin: 10px 0;
+      padding: 6px;
+      border-radius: var(--border-radius-md);
+      border: 1px solid var(--divider-color);
+      background: var(--image-bg);
+      font-size: 10px;
+    }
+
+    .embed-toolbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 6px;
+      font-family: var(--ui-font);
+    }
+
+    .embed-size-controls {
+      display: inline-flex;
+      gap: 2px;
+    }
+
+    .embed-size-controls button {
+      border: none;
+      background: transparent;
+      font-size: 9px;
+      padding: 1px 4px;
+      border-radius: 999px;
+      cursor: pointer;
+      color: #6b7280;
+    }
+
+    .embed-size-controls button.active {
+      background: rgba(17,24,39,0.08);
+      color: #111827;
+    }
+
+    .embed-edit {
+      border: none;
+      background: rgba(17,24,39,0.08);
+      color: #111827;
+      font-size: 9px;
+      padding: 2px 8px;
+      border-radius: 999px;
+      cursor: pointer;
+    }
+
+    .embed-edit:hover {
+      background: rgba(17,24,39,0.16);
+    }
+
+    .embed-wrapper {
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%;
+      background: #000;
+      border-radius: var(--border-radius-sm);
+      overflow: hidden;
+      margin: 0 auto;
+    }
+
+    .embed-wrapper iframe,
+    .embed-wrapper video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+
+    .embed-size-s .embed-wrapper {
+      max-width: 45%;
+    }
+
+    .embed-size-m .embed-wrapper {
+      max-width: 70%;
+    }
+
+    .embed-size-l .embed-wrapper {
+      max-width: 100%;
+    }
+
+    .embed-title,
+    .embed-caption {
+      margin-top: 6px;
+      font-size: 11px;
+      color: var(--muted-text);
+      text-align: center;
+    }
+
+    .embed-title {
+      font-weight: 600;
+    }
+
     /* Footnotes page */
     .footnotes-page .page-body {
       padding-top: 18px;
@@ -1176,6 +1273,7 @@
       <button class="toolbar-btn" data-add="table-glance" aria-label="Insert at-a-glance table">At-a-glance</button>
       <button class="toolbar-btn" data-add="table-bai" aria-label="Insert before after impact table">Before/After/Impact</button>
       <button class="toolbar-btn" data-add="table-custom" aria-label="Insert custom table">Custom table</button>
+      <button class="toolbar-btn" data-add="embed" aria-label="Insert embed">Embed</button>
       <button class="toolbar-btn" data-add="image" aria-label="Insert image">Image</button>
     </div>
 
@@ -1329,7 +1427,24 @@
     'What we need them to do…',
     'Key dates…',
     'Add an explanatory caption…',
+    'Add a descriptive caption…',
+    'Describe this embed for screen readers…',
     'Your footnote text here.'
+  ];
+
+  const EMBED_DEFAULT_CAPTION = 'Add a descriptive caption…';
+  const EMBED_DEFAULT_TITLE = 'Describe this embed for screen readers…';
+  const ALLOWED_EMBED_HOSTS = [
+    'youtube.com',
+    'www.youtube.com',
+    'youtube-nocookie.com',
+    'www.youtube-nocookie.com',
+    'youtu.be',
+    'player.vimeo.com',
+    'vimeo.com',
+    'www.vimeo.com',
+    'open.spotify.com',
+    'spotify.com'
   ];
 
   const INTERNAL_MARKER_START = '<!--EBD_INTERNAL_START-->';
@@ -1370,6 +1485,35 @@
     } catch (err) {
       /* noop */
     }
+  }
+
+  function escapeHTML(str) {
+    return String(str || '').replace(/[&<>"']/g, ch => ({
+      '&': '&amp;',
+      '<': '&lt;',
+      '>': '&gt;',
+      '"': '&quot;',
+      "'": '&#39;'
+    }[ch] || ch));
+  }
+
+  function getAllowedEmbedURL(url) {
+    if (!url || !/^https?:\/\//i.test(url)) return null;
+    try {
+      const parsed = new URL(url);
+      if (parsed.protocol !== 'https:') return null;
+      const host = parsed.hostname.toLowerCase();
+      const allowed = ALLOWED_EMBED_HOSTS.some(allowedHost =>
+        host === allowedHost || host.endsWith('.' + allowedHost)
+      );
+      return allowed ? parsed : null;
+    } catch (err) {
+      return null;
+    }
+  }
+
+  function isAllowedEmbedURL(url) {
+    return !!getAllowedEmbedURL(url);
   }
 
   function promptRestoreDraft() {
@@ -2599,6 +2743,114 @@
     });
   }
 
+  function createEmbedBlock({ url, title = '', caption = '', size = 'm' } = {}) {
+    const normalizedSize = ['s', 'm', 'l'].includes(size) ? size : 'm';
+    const safeUrl = escapeHTML(url);
+    const safeTitleAttr = escapeHTML(title);
+    const titleAttribute = title ? ` title="${safeTitleAttr}"` : '';
+    const toolbarButtons = ['s', 'm', 'l'].map(key => {
+      const label = key.toUpperCase();
+      const active = key === normalizedSize ? ' class="active"' : '';
+      return `<button data-size="${key}"${active}>${label}</button>`;
+    }).join('');
+    const block = document.createElement('div');
+    block.className = `embed-block embed-size-${normalizedSize} page-break-avoider`;
+    block.dataset.deletable = 'true';
+    block.dataset.embedSrc = url;
+    block.innerHTML = `
+      ${DELETE_ICON_HTML}
+      <div class="embed-toolbar" contenteditable="false">
+        <div class="embed-size-controls">
+          ${toolbarButtons}
+        </div>
+        <button type="button" class="embed-edit">Change embed</button>
+      </div>
+      <div class="embed-wrapper">
+        <iframe src="${safeUrl}"${titleAttribute} loading="lazy"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen referrerpolicy="strict-origin-when-cross-origin"></iframe>
+      </div>
+      <div class="embed-title" contenteditable="true">${title ? escapeHTML(title) : escapeHTML(EMBED_DEFAULT_TITLE)}</div>
+      <div class="embed-caption" contenteditable="true">${caption ? escapeHTML(caption) : escapeHTML(EMBED_DEFAULT_CAPTION)}</div>
+    `;
+    return block;
+  }
+
+  function addEmbedBlock({ url, title = '', caption = '', size = 'm' } = {}) {
+    const body = getActiveContentPageBody();
+    if (!body) return null;
+    captureSnapshot();
+    const block = createEmbedBlock({ url, title, caption, size });
+    body.appendChild(block);
+    afterChange();
+    ensureBlockVisible(block);
+    return block;
+  }
+
+  function openEmbedModal(existingBlock = null) {
+    const iframe = existingBlock ? existingBlock.querySelector('iframe') : null;
+    const existingUrl = existingBlock ? (existingBlock.dataset.embedSrc || (iframe && iframe.getAttribute('src')) || '') : '';
+    const existingTitleAttr = iframe ? (iframe.getAttribute('title') || '') : '';
+
+    openModal({
+      title: existingBlock ? 'Update embed' : 'Add embed',
+      body: `
+        <label>Embed URL</label>
+        <input type="url" id="embed-url" placeholder="https://www.youtube.com/embed/..." />
+        <label>Title (for screen readers)</label>
+        <input type="text" id="embed-title-input" placeholder="${escapeHTML(EMBED_DEFAULT_TITLE)}" />
+      `,
+      confirmLabel: existingBlock ? 'Update' : 'Add',
+      onConfirm: () => {
+        const urlInput = modalInner.querySelector('#embed-url');
+        const titleInput = modalInner.querySelector('#embed-title-input');
+        const url = urlInput ? urlInput.value.trim() : '';
+        const title = titleInput ? titleInput.value.trim() : '';
+
+        if (!isAllowedEmbedURL(url)) {
+          showSnackbar('Embed URL must be HTTPS and use an approved host (YouTube, Vimeo, Spotify).');
+          return;
+        }
+
+        if (existingBlock) {
+          captureSnapshot();
+          const blockIframe = existingBlock.querySelector('iframe');
+          if (blockIframe) {
+            blockIframe.setAttribute('src', url);
+            if (title) {
+              blockIframe.setAttribute('title', title);
+            } else {
+              blockIframe.removeAttribute('title');
+            }
+          }
+          existingBlock.dataset.embedSrc = url;
+          const titleEl = existingBlock.querySelector('.embed-title');
+          if (titleEl) {
+            titleEl.textContent = title ? title : EMBED_DEFAULT_TITLE;
+          }
+          afterChange();
+          closeModal();
+          ensureBlockVisible(existingBlock);
+          return;
+        }
+
+        const newBlock = addEmbedBlock({ url, title });
+        if (newBlock) {
+          closeModal();
+        } else {
+          showSnackbar('Select a page to add the embed.');
+        }
+      },
+      onCancel: closeModal
+    });
+
+    const urlField = modalInner.querySelector('#embed-url');
+    const titleField = modalInner.querySelector('#embed-title-input');
+    if (urlField) urlField.value = existingUrl;
+    if (titleField) titleField.value = existingTitleAttr;
+    if (urlField) urlField.focus();
+  }
+
   function addImageBlockWithURL(url) {
     if (!url) return;
     const body = getActiveContentPageBody();
@@ -2842,11 +3094,15 @@
   function sanitizeExternalHTML(html) {
     const allowedTags = new Set([
       'P','H1','H2','H3','H4','UL','OL','LI','A','STRONG','EM',
-      'B','I','TABLE','TBODY','THEAD','TR','TD','TH','BLOCKQUOTE','BR','SPAN'
+      'B','I','TABLE','TBODY','THEAD','TR','TD','TH','BLOCKQUOTE','BR','SPAN',
+      'IFRAME','VIDEO','SOURCE'
     ]);
     const allowedAttrs = {
       'A': ['href'],
-      'TD': [], 'TH': [], 'TABLE': [], 'TR': [], 'P': [], 'BLOCKQUOTE': [], 'SPAN': []
+      'TD': [], 'TH': [], 'TABLE': [], 'TR': [], 'P': [], 'BLOCKQUOTE': [], 'SPAN': [],
+      'IFRAME': ['src','title','allow','allowfullscreen','loading','referrerpolicy'],
+      'VIDEO': ['src','controls','loop','muted','playsinline','poster','preload','title'],
+      'SOURCE': ['src','type']
     };
     const parser = new DOMParser();
     const doc = parser.parseFromString(html, 'text/html');
@@ -2864,17 +3120,39 @@
       }
       const el = document.createElement(node.tagName.toLowerCase());
       const allowed = allowedAttrs[node.tagName] || [];
+      const tagName = node.tagName;
+      let hasAllowedSrc = false;
       for (let attr of Array.from(node.attributes)) {
-        if (attr.name.toLowerCase() === 'href' && /^https?:\/\//i.test(attr.value)) {
+        const name = attr.name.toLowerCase();
+        if (name === 'href' && /^https?:\/\//i.test(attr.value)) {
           el.setAttribute('href', attr.value);
-        } else if (allowed.includes(attr.name.toLowerCase())) {
-          el.setAttribute(attr.name, attr.value);
+        } else if (name === 'src') {
+          if ((tagName === 'IFRAME' || tagName === 'VIDEO' || tagName === 'SOURCE') && isAllowedEmbedURL(attr.value)) {
+            el.setAttribute('src', attr.value);
+            hasAllowedSrc = true;
+          }
+        } else if (allowed.includes(name)) {
+          if (attr.value === '') {
+            el.setAttribute(attr.name, attr.value);
+          } else {
+            el.setAttribute(attr.name, attr.value);
+          }
         }
       }
       node.childNodes.forEach(child => {
         const c = cleanse(child);
         if (c) el.appendChild(c);
       });
+      if (tagName === 'IFRAME' && !hasAllowedSrc) {
+        return document.createDocumentFragment();
+      }
+      if (tagName === 'SOURCE' && !hasAllowedSrc) {
+        return document.createDocumentFragment();
+      }
+      if (tagName === 'VIDEO') {
+        const hasSourceChild = hasAllowedSrc || el.querySelector('source');
+        if (!hasSourceChild) return document.createDocumentFragment();
+      }
       return el;
     }
 
@@ -3165,7 +3443,7 @@
   function collectQualityIssues() {
     const issues = new Set();
     const placeholderHits = new Set();
-    const scanNodes = editorRoot.querySelectorAll('[data-deletable="true"], td, th, .steps-block li, .faq-block .faq-q, .faq-block .faq-a, .image-caption');
+    const scanNodes = editorRoot.querySelectorAll('[data-deletable="true"], td, th, .steps-block li, .faq-block .faq-q, .faq-block .faq-a, .image-caption, .embed-caption, .embed-title');
     scanNodes.forEach(node => {
       const text = (node.textContent || '').trim();
       if (!text) return;
@@ -3198,6 +3476,25 @@
       }
       if (!captionText || captionText === 'Add an explanatory caption…') {
         issues.add('Add explanatory captions for images.');
+      }
+    });
+
+    editorRoot.querySelectorAll('.embed-block').forEach(block => {
+      const captionEl = block.querySelector('.embed-caption');
+      const titleEl = block.querySelector('.embed-title');
+      const iframe = block.querySelector('iframe');
+      const captionText = captionEl ? captionEl.textContent.trim() : '';
+      const titleText = titleEl ? titleEl.textContent.trim() : '';
+      const iframeTitle = iframe ? (iframe.getAttribute('title') || '').trim() : '';
+      const src = iframe ? (iframe.getAttribute('src') || '').trim() : '';
+      if (!captionText || captionText === EMBED_DEFAULT_CAPTION) {
+        issues.add('Add descriptive captions for embeds.');
+      }
+      if (!titleText || titleText === EMBED_DEFAULT_TITLE || !iframeTitle) {
+        issues.add('Provide descriptive screen reader titles for embeds.');
+      }
+      if (src && !isAllowedEmbedURL(src)) {
+        issues.add('Update embeds to use approved hosts (YouTube, Vimeo, Spotify).');
       }
     });
 
@@ -3275,6 +3572,7 @@
       '.steps-add',
       '.faq-add',
       '.image-size-controls',
+      '.embed-toolbar',
       '.col-resize-handle',
       '.footnote-return'
     ];
@@ -3285,6 +3583,19 @@
       const replacement = document.createElement('span');
       replacement.textContent = alt ? `[Image: ${alt}]` : '[Image]';
       img.replaceWith(replacement);
+    });
+
+    clone.querySelectorAll('.embed-block iframe, .embed-block video').forEach(embed => {
+      const title = (embed.getAttribute('title') || '').trim();
+      const src = (embed.getAttribute('src') || '').trim();
+      const replacement = document.createElement('span');
+      replacement.textContent = title ? `[Embed: ${title}]` : (src ? `[Embed: ${src}]` : '[Embed]');
+      const wrapper = embed.closest('.embed-wrapper');
+      if (wrapper && wrapper.parentElement) {
+        wrapper.replaceWith(replacement);
+      } else {
+        embed.replaceWith(replacement);
+      }
     });
 
     clone.querySelectorAll('.footnote-ref').forEach(ref => {
@@ -3493,6 +3804,28 @@
       return;
     }
 
+    if (target.closest('.embed-size-controls') && target.dataset.size) {
+      const block = target.closest('.embed-block');
+      if (block) {
+        captureSnapshot();
+        block.classList.remove('embed-size-s','embed-size-m','embed-size-l');
+        block.classList.add('embed-size-' + target.dataset.size);
+        block.querySelectorAll('.embed-size-controls button')
+          .forEach(btn => btn.classList.remove('active'));
+        target.classList.add('active');
+        afterChange();
+      }
+      return;
+    }
+
+    if (target.classList.contains('embed-edit')) {
+      const block = target.closest('.embed-block');
+      if (block) {
+        openEmbedModal(block);
+      }
+      return;
+    }
+
     // Page controls
     if (target.dataset.movePageUp !== undefined ||
         target.dataset.movePageDown !== undefined ||
@@ -3659,6 +3992,19 @@
       }
     }
 
+    if (target.classList && target.classList.contains('embed-title')) {
+      const block = target.closest('.embed-block');
+      const iframe = block ? block.querySelector('iframe') : null;
+      if (iframe) {
+        const text = (target.textContent || '').trim();
+        if (text && text !== EMBED_DEFAULT_TITLE) {
+          iframe.setAttribute('title', text);
+        } else {
+          iframe.removeAttribute('title');
+        }
+      }
+    }
+
     // Edits inside Footnotes page: keep references tidy
     if (target.closest && target.closest('.footnotes-page')) {
       renumberFootnotes();
@@ -3709,6 +4055,7 @@
     'table-glance': addAtAGlanceTable,
     'table-bai': addBAITable,
     'table-custom': openCustomTableModal,
+    embed: () => openEmbedModal(),
     image: openImageModal
   };
 
