--- a/Maineditor.html
+++ b/Maineditor.html
@@ -1125,6 +1125,47 @@
       outline: none;
     }
 
+    .embed-host-guidance {
+      background: rgba(30,41,59,0.7);
+      border: 1px solid rgba(148,163,184,0.2);
+      border-radius: 6px;
+      padding: 6px;
+      margin: 2px 0 6px;
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    .embed-host-status {
+      font-weight: 600;
+      font-size: 10px;
+      color: #cbd5f5;
+    }
+
+    .embed-host-status[data-state="approved"] {
+      color: #6ee7b7;
+    }
+
+    .embed-host-status[data-state="warning"] {
+      color: #facc15;
+    }
+
+    .embed-host-status[data-state="error"] {
+      color: #fca5a5;
+    }
+
+    .embed-host-tip {
+      font-size: 10px;
+      color: #94a3b8;
+      line-height: 1.4;
+    }
+
+    .embed-host-warning {
+      font-size: 10px;
+      color: #fbbf24;
+      line-height: 1.4;
+    }
+
     .modal-actions {
       display: flex;
       justify-content: flex-end;
@@ -1435,17 +1476,45 @@
   const EMBED_DEFAULT_CAPTION = 'Add a descriptive caption…';
   const EMBED_DEFAULT_TITLE = 'Describe this embed for screen readers…';
   const ALLOWED_EMBED_HOSTS = [
-    'youtube.com',
-    'www.youtube.com',
-    'youtube-nocookie.com',
-    'www.youtube-nocookie.com',
-    'youtu.be',
-    'player.vimeo.com',
-    'vimeo.com',
-    'www.vimeo.com',
-    'open.spotify.com',
-    'spotify.com'
+    {
+      label: 'YouTube',
+      severity: 'approved',
+      hosts: [
+        'youtube.com',
+        'www.youtube.com',
+        'youtube-nocookie.com',
+        'www.youtube-nocookie.com',
+        'youtu.be'
+      ],
+      tip: 'Tip: Use Share → Embed (https://www.youtube-nocookie.com) for privacy-friendly players.'
+    },
+    {
+      label: 'Vimeo',
+      severity: 'approved',
+      hosts: [
+        'player.vimeo.com',
+        'vimeo.com',
+        'www.vimeo.com'
+      ],
+      tip: 'Tip: Prefer player.vimeo.com links for clean embeds without extra chrome.'
+    },
+    {
+      label: 'Spotify',
+      severity: 'approved',
+      hosts: [
+        'open.spotify.com',
+        'spotify.com'
+      ],
+      tip: 'Tip: Use Share → Copy link from Spotify to grab embeddable tracks or episodes.'
+    }
   ];
+
+  const EMBED_GUIDANCE_COPY = {
+    defaultTip: 'Paste a full https:// embed link to check compatibility.',
+    customTip: 'Double-check privacy controls and only embed trusted, accessible players.',
+    customWarning: 'Custom hosts are allowed but flagged during quality checks.',
+    blockedTip: 'Ensure the URL begins with https:// and comes from a trusted provider.'
+  };
 
   const INTERNAL_MARKER_START = '<!--EBD_INTERNAL_START-->';
   const INTERNAL_MARKER_END = '<!--EBD_INTERNAL_END-->';
@@ -1498,22 +1567,30 @@
   }
 
   function getAllowedEmbedURL(url) {
-    if (!url || !/^https?:\/\//i.test(url)) return null;
+    if (!url || !/^https?:\/\//i.test(url)) {
+      return { parsed: null, severity: 'blocked', reason: 'Embed URL must begin with https://', host: '' };
+    }
     try {
       const parsed = new URL(url);
-      if (parsed.protocol !== 'https:') return null;
+      if (parsed.protocol !== 'https:') {
+        return { parsed, severity: 'blocked', reason: 'Embed URLs must use HTTPS.', host: parsed.hostname.toLowerCase() };
+      }
       const host = parsed.hostname.toLowerCase();
-      const allowed = ALLOWED_EMBED_HOSTS.some(allowedHost =>
-        host === allowedHost || host.endsWith('.' + allowedHost)
-      );
-      return allowed ? parsed : null;
+      const rule = ALLOWED_EMBED_HOSTS.find(entry =>
+        (entry.hosts || []).some(allowedHost => host === allowedHost || host.endsWith('.' + allowedHost))
+      ) || null;
+      if (rule) {
+        return { parsed, severity: rule.severity || 'approved', reason: '', host, rule };
+      }
+      return { parsed, severity: 'custom', reason: '', host, rule: null };
     } catch (err) {
-      return null;
+      return { parsed: null, severity: 'blocked', reason: 'Enter a valid HTTPS URL.', host: '' };
     }
   }
 
   function isAllowedEmbedURL(url) {
-    return !!getAllowedEmbedURL(url);
+    const result = getAllowedEmbedURL(url);
+    return !!(result && result.parsed && result.severity !== 'blocked');
   }
 
   function promptRestoreDraft() {
@@ -2743,7 +2820,7 @@
     });
   }
 
-  function createEmbedBlock({ url, title = '', caption = '', size = 'm' } = {}) {
+  function createEmbedBlock({ url, title = '', caption = '', size = 'm', severity = 'custom', host = '' } = {}) {
     const normalizedSize = ['s', 'm', 'l'].includes(size) ? size : 'm';
     const safeUrl = escapeHTML(url);
     const safeTitleAttr = escapeHTML(title);
@@ -2757,6 +2834,12 @@
     block.className = `embed-block embed-size-${normalizedSize} page-break-avoider`;
     block.dataset.deletable = 'true';
     block.dataset.embedSrc = url;
+    block.dataset.embedSeverity = severity;
+    if (host) {
+      block.dataset.embedHost = host;
+    } else {
+      delete block.dataset.embedHost;
+    }
     block.innerHTML = `
       ${DELETE_ICON_HTML}
       <div class="embed-toolbar" contenteditable="false">
@@ -2780,7 +2863,15 @@
     const body = getActiveContentPageBody();
     if (!body) return null;
     captureSnapshot();
-    const block = createEmbedBlock({ url, title, caption, size });
+    const meta = getAllowedEmbedURL(url);
+    const block = createEmbedBlock({
+      url,
+      title,
+      caption,
+      size,
+      severity: meta && meta.severity ? meta.severity : 'custom',
+      host: meta && meta.host ? meta.host : ''
+    });
     body.appendChild(block);
     afterChange();
     ensureBlockVisible(block);
@@ -2791,12 +2882,28 @@
     const iframe = existingBlock ? existingBlock.querySelector('iframe') : null;
     const existingUrl = existingBlock ? (existingBlock.dataset.embedSrc || (iframe && iframe.getAttribute('src')) || '') : '';
     const existingTitleAttr = iframe ? (iframe.getAttribute('title') || '') : '';
+    const approvedProviders = ALLOWED_EMBED_HOSTS
+      .filter(entry => (entry.severity || 'approved') !== 'blocked')
+      .map(entry => entry.label)
+      .join(', ');
+    const defaultStatusText = approvedProviders
+      ? `Approved providers: ${approvedProviders}.`
+      : 'Paste an HTTPS embed URL to get started.';
+
+    // Embed modal UX copy is centralised here to keep authoring guidance close to the UI wiring.
+    const defaultTip = EMBED_GUIDANCE_COPY.defaultTip;
+    const warningCopy = EMBED_GUIDANCE_COPY.customWarning;
 
     openModal({
       title: existingBlock ? 'Update embed' : 'Add embed',
       body: `
         <label>Embed URL</label>
         <input type="url" id="embed-url" placeholder="https://www.youtube.com/embed/..." />
+        <div class="embed-host-guidance">
+          <div class="embed-host-status" data-embed-status>${escapeHTML(defaultStatusText)}</div>
+          <div class="embed-host-tip" data-embed-tip>${escapeHTML(defaultTip)}</div>
+          <div class="embed-host-warning" data-embed-warning hidden>${escapeHTML(warningCopy)}</div>
+        </div>
         <label>Title (for screen readers)</label>
         <input type="text" id="embed-title-input" placeholder="${escapeHTML(EMBED_DEFAULT_TITLE)}" />
       `,
@@ -2806,12 +2913,18 @@
         const titleInput = modalInner.querySelector('#embed-title-input');
         const url = urlInput ? urlInput.value.trim() : '';
         const title = titleInput ? titleInput.value.trim() : '';
+        const meta = getAllowedEmbedURL(url);
 
-        if (!isAllowedEmbedURL(url)) {
-          showSnackbar('Embed URL must be HTTPS and use an approved host (YouTube, Vimeo, Spotify).');
+        if (!meta.parsed || meta.severity === 'blocked') {
+          showSnackbar(meta.reason || 'Embed URLs must use HTTPS.');
+          if (urlInput) {
+            urlInput.focus();
+            renderGuidance(meta, urlInput.value);
+          }
           return;
         }
 
+        let saved = false;
         if (existingBlock) {
           captureSnapshot();
           const blockIframe = existingBlock.querySelector('iframe');
@@ -2824,31 +2937,96 @@
             }
           }
           existingBlock.dataset.embedSrc = url;
+          existingBlock.dataset.embedSeverity = meta.severity;
+          if (meta.host) {
+            existingBlock.dataset.embedHost = meta.host;
+          } else {
+            delete existingBlock.dataset.embedHost;
+          }
           const titleEl = existingBlock.querySelector('.embed-title');
           if (titleEl) {
-            titleEl.textContent = title ? title : EMBED_DEFAULT_TITLE;
+            titleEl.textContent = title ? escapeHTML(title) : EMBED_DEFAULT_TITLE;
           }
           afterChange();
           closeModal();
           ensureBlockVisible(existingBlock);
-          return;
+          saved = true;
+        } else {
+          const newBlock = addEmbedBlock({ url, title });
+          if (newBlock) {
+            const caption = newBlock.querySelector('.embed-caption');
+            if (caption) caption.textContent = EMBED_DEFAULT_CAPTION;
+            closeModal();
+            saved = true;
+          } else {
+            showSnackbar('Select a page to add the embed.');
+            return;
+          }
         }
 
-        const newBlock = addEmbedBlock({ url, title });
-        if (newBlock) {
-          closeModal();
-        } else {
-          showSnackbar('Select a page to add the embed.');
+        if (saved && meta.severity === 'custom') {
+          showSnackbar('Custom embed saved. Quality check will flag it for review.');
         }
       },
       onCancel: closeModal
     });
 
-    const urlField = modalInner.querySelector('#embed-url');
-    const titleField = modalInner.querySelector('#embed-title-input');
-    if (urlField) urlField.value = existingUrl;
-    if (titleField) titleField.value = existingTitleAttr;
-    if (urlField) urlField.focus();
+    const urlInput = modalInner.querySelector('#embed-url');
+    const titleInput = modalInner.querySelector('#embed-title-input');
+    const statusEl = modalInner.querySelector('[data-embed-status]');
+    const tipEl = modalInner.querySelector('[data-embed-tip]');
+    const warningEl = modalInner.querySelector('[data-embed-warning]');
+
+    const renderGuidance = (meta, value) => {
+      if (!statusEl || !tipEl || !warningEl) return;
+      const trimmed = value ? value.trim() : '';
+      if (!trimmed) {
+        statusEl.textContent = defaultStatusText;
+        statusEl.dataset.state = 'neutral';
+        tipEl.textContent = defaultTip;
+        warningEl.hidden = true;
+        return;
+      }
+
+      if (!meta || !meta.parsed || meta.severity === 'blocked') {
+        statusEl.textContent = meta && meta.reason ? meta.reason : 'Embed URLs must use HTTPS.';
+        statusEl.dataset.state = 'error';
+        tipEl.textContent = EMBED_GUIDANCE_COPY.blockedTip;
+        warningEl.hidden = true;
+        return;
+      }
+
+      if (meta.severity === 'approved') {
+        statusEl.textContent = meta.rule ? `Approved provider: ${meta.rule.label}` : `Approved provider: ${meta.host}`;
+        statusEl.dataset.state = 'approved';
+        const providerTip = (meta.rule && meta.rule.tip) ? meta.rule.tip : defaultTip;
+        tipEl.textContent = providerTip;
+        warningEl.hidden = true;
+        return;
+      }
+
+      statusEl.textContent = `Custom host detected: ${meta.host}`;
+      statusEl.dataset.state = 'warning';
+      tipEl.textContent = EMBED_GUIDANCE_COPY.customTip;
+      warningEl.textContent = EMBED_GUIDANCE_COPY.customWarning;
+      warningEl.hidden = false;
+    };
+
+    if (urlInput) {
+      urlInput.value = existingUrl;
+      const initialMeta = existingUrl ? getAllowedEmbedURL(existingUrl) : null;
+      renderGuidance(initialMeta, existingUrl);
+      urlInput.addEventListener('input', event => {
+        const value = event.target.value;
+        const meta = getAllowedEmbedURL(value);
+        renderGuidance(meta, value);
+      });
+      urlInput.focus();
+    }
+
+    if (titleInput) {
+      titleInput.value = existingTitleAttr;
+    }
   }
 
   function addImageBlockWithURL(url) {
@@ -3127,9 +3305,15 @@
         if (name === 'href' && /^https?:\/\//i.test(attr.value)) {
           el.setAttribute('href', attr.value);
         } else if (name === 'src') {
-          if ((tagName === 'IFRAME' || tagName === 'VIDEO' || tagName === 'SOURCE') && isAllowedEmbedURL(attr.value)) {
-            el.setAttribute('src', attr.value);
-            hasAllowedSrc = true;
+          if (tagName === 'IFRAME' || tagName === 'VIDEO' || tagName === 'SOURCE') {
+            const meta = getAllowedEmbedURL(attr.value);
+            if (meta.parsed && meta.severity !== 'blocked') {
+              el.setAttribute('src', attr.value);
+              hasAllowedSrc = true;
+              if (meta.severity === 'custom' && meta.host) {
+                console.warn(`[EBD] Custom embed host retained during paste: ${meta.host}`);
+              }
+            }
           }
         } else if (allowed.includes(name)) {
           if (attr.value === '') {
@@ -3442,6 +3626,7 @@
 
   function collectQualityIssues() {
     const issues = new Set();
+    const warnings = new Set();
     const placeholderHits = new Set();
     const scanNodes = editorRoot.querySelectorAll('[data-deletable="true"], td, th, .steps-block li, .faq-block .faq-q, .faq-block .faq-a, .image-caption, .embed-caption, .embed-title');
     scanNodes.forEach(node => {
@@ -3487,14 +3672,17 @@
       const titleText = titleEl ? titleEl.textContent.trim() : '';
       const iframeTitle = iframe ? (iframe.getAttribute('title') || '').trim() : '';
       const src = iframe ? (iframe.getAttribute('src') || '').trim() : '';
+      const meta = src ? getAllowedEmbedURL(src) : null;
       if (!captionText || captionText === EMBED_DEFAULT_CAPTION) {
         issues.add('Add descriptive captions for embeds.');
       }
       if (!titleText || titleText === EMBED_DEFAULT_TITLE || !iframeTitle) {
         issues.add('Provide descriptive screen reader titles for embeds.');
       }
-      if (src && !isAllowedEmbedURL(src)) {
-        issues.add('Update embeds to use approved hosts (YouTube, Vimeo, Spotify).');
+      if (!meta || !meta.parsed || meta.severity === 'blocked') {
+        issues.add('Update embeds to use secure HTTPS URLs.');
+      } else if (meta.severity === 'custom' && meta.host) {
+        warnings.add(`Review custom embed host: ${meta.host}.`);
       }
     });
 
@@ -3503,22 +3691,28 @@
       issues.add('Resolve placeholder footnote references [?].');
     }
 
-    return Array.from(issues);
+    return {
+      issues: Array.from(issues),
+      warnings: Array.from(warnings)
+    };
   }
 
   function runQualityCheck(options = {}) {
     const { onContinue, showNoIssues = true } = options;
-    const issues = collectQualityIssues();
-    if (!issues.length) {
+    const { issues, warnings } = collectQualityIssues();
+    const hasIssues = issues.length > 0;
+    const hasWarnings = warnings.length > 0;
+    if (!hasIssues && !hasWarnings) {
       if (showNoIssues) showSnackbar('No quality issues found');
       if (typeof onContinue === 'function') onContinue();
       return;
     }
 
-    const listItems = issues.map(issue => `<li>${issue}</li>`).join('');
+    const listItems = hasIssues ? `<p>Fix these before finalising your brief:</p><ul>${issues.map(issue => `<li>${issue}</li>`).join('')}</ul>` : '';
+    const warningItems = hasWarnings ? `<p>Heads-up checks:</p><ul>${warnings.map(warning => `<li>${warning}</li>`).join('')}</ul>` : '';
     openModal({
       title: 'Quality check',
-      body: `<p>Fix these before finalising your brief:</p><ul>${listItems}</ul>`,
+      body: `${listItems}${warningItems}`,
       confirmLabel: onContinue ? 'Continue anyway' : 'OK',
       cancelLabel: 'Close',
       onConfirm: () => {
